gnstlib_fortran/gnstlib.h

/* Exponential and logarithmic functions */
/******************************************************************************/
/* compute exp(x) */
double gnstlib_exp(const double x);
/* compute exp2(x) = 2^x */
double gnstlib_exp2(const double x);
/* compute exp10(x) = 10^x */
double gnstlib_exp10(const double x);
/* compute exp(x) - 1 */
double gnstlib_expm1(const double x);
/* compute (exp(x) - 1) / x */
double gnstlib_expm1x(const double x);
/* compute (exp(x) - 1 - x) / (0.5 * x * x) */
double gnstlib_expm1mx(const double x);
/* compute log(x) */
double gnstlib_log(const double x);
/* compute log2(x) */
double gnstlib_log2(const double x);
/* compute log10(x) */
double gnstlib_log10(const double x);
/* compute log(1 + x) */
double gnstlib_log1p(const double x);
/* compute log(1 + x) - x = log1p(x) - x */
double gnstlib_log1pmx(const double x);
 
/* compute log(1 - exp(x)) */
double gnstlib_log1mexp(const double x, int& err_id);
/* compute log(1 + exp(x)) */
double gnstlib_log1pexp(const double x);
/* compute exp(z) */
std::complex<double> gnstlib_cexp(const std::complex<double> z);
/* compute log(z) */
std::complex<double> gnstlib_clog(const std::complex<double> z);
/* Trigonometric functions */
/******************************************************************************/
// compute cos(x)
double gnstlib_cos(const double x);
// compute sin(x)
double gnstlib_sin(const double x);
// compute tan(x)
double gnstlib_tan(const double x);
// compute sec(x)
double gnstlib_sec(const double x);
// compute csc(x)
double gnstlib_csc(const double x);
// compute cot(x)
double gnstlib_cot(const double x);
// compute acos(x)
double gnstlib_acos(const double x);
// compute asin(x)
double gnstlib_asin(const double x);
// compute atan(x)
double gnstlib_atan(const double x);
// còmpute atan2(y, x)
double gnstlib_atan2(const double y, const double x);
// compute asec(x)
double gnstlib_asec(const double x);
// compute acsc(x)
double gnstlib_acsc(const double x);
// compute acot(x)
double gnstlib_acot(const double x);
// compute cos(pi * x)
double gnstlib_cospi(const double x);
// compute sin(pi * x)
double gnstlib_sinpi(const double x);
// compute cos(z)
std::complex<double> gnstlib_ccos(const std::complex<double> z);
// compute sin(z)
std::complex<double> gnstlib_csin(const std::complex<double> z);
// compute tan(z)
std::complex<double> gnstlib_ctan(const std::complex<double> z);
// compute sec(z)
std::complex<double> gnstlib_csec(const std::complex<double> z);
// compute csc(z)
std::complex<double> gnstlib_ccsc(const std::complex<double> z);
// compute cot(z)
std::complex<double> gnstlib_ccot(const std::complex<double> z);
// compute acos(z)
std::complex<double> gnstlib_cacos(const std::complex<double> z);
// compute asin(z)
std::complex<double> gnstlib_casin(const std::complex<double> z);
// compute atan(z)
std::complex<double> gnstlib_catan(const std::complex<double> z);
// compute asec(z)
std::complex<double> gnstlib_casec(const std::complex<double> z);
// compute acsc(z)
std::complex<double> gnstlib_cacsc(const std::complex<double> z);
// compute acot(z)
std::complex<double> gnstlib_cacot(const std::complex<double> z);
// compute cos(pi * z)
std::complex<double> gnstlib_ccospi(const std::complex<double> z);
// compute sin(pi * z)
std::complex<double> gnstlib_csinpi(const std::complex<double> z);
/* Hyperbolic functions */
/******************************************************************************/
// compute cosh(x)
double gnstlib_cosh(const double x);