gnstlib_fortran/gnstlib_cdef.f90

! Copyright (C) 2017 A. Gil, G. Navas-Palencia, J. Segura and N. M. Temme

! Permission is hereby granted, free of charge, to any person obtaining
! a copy of this software and associated documentation files (the
! "Software"), to deal in the Software without restriction, including
! without limitation the rights to use, copy, modify, merge, publish,
! distribute, sublicense, and/or sell copies of the Software, and to
! permit persons to whom the Software is furnished to do so, subject to
! the following conditions:

! The above copyright notice and this permission notice shall be
! included in all copies or substantial portions of the Software.

! THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
! EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
! MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
! NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
! LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
! OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
! WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

! C functions declaration
interface
    function gnstlib_exp_c(x) bind(C, name="gnstlib_exp")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_exp_c
        real(c_double), intent(in), value :: x
    end function gnstlib_exp_c

    function gnstlib_exp2_c(x) bind(C, name="gnstlib_exp2")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_exp2_c
        real(c_double), intent(in), value :: x
    end function gnstlib_exp2_c

    function gnstlib_exp10_c(x) bind(C, name="gnstlib_exp10")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_exp10_c
        real(c_double), intent(in), value :: x
    end function gnstlib_exp10_c

    function gnstlib_expm1_c(x) bind(C, name="gnstlib_expm1")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_expm1_c
        real(c_double), intent(in), value :: x
    end function gnstlib_expm1_c

    function gnstlib_expm1x_c(x) bind(C, name="gnstlib_expm1x")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_expm1x_c
        real(c_double), intent(in), value :: x
    end function gnstlib_expm1x_c

    function gnstlib_expm1mx_c(x) bind(C, name="gnstlib_expm1mx")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_expm1mx_c
        real(c_double), intent(in), value :: x
    end function gnstlib_expm1mx_c

    function gnstlib_log_c(x) bind(C, name="gnstlib_log")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_log_c
        real(c_double), intent(in), value :: x
    end function gnstlib_log_c

    function gnstlib_log2_c(x) bind(C, name="gnstlib_log2")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_log2_c
        real(c_double), intent(in), value :: x
    end function gnstlib_log2_c

    function gnstlib_log10_c(x) bind(C, name="gnstlib_log10")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_log10_c
        real(c_double), intent(in), value :: x
    end function gnstlib_log10_c

    function gnstlib_log1p_c(x) bind(C, name="gnstlib_log1p")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_log1p_c
        real(c_double), intent(in), value :: x
    end function gnstlib_log1p_c

    function gnstlib_log1pmx_c(x) bind(C, name="gnstlib_log1pmx")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_log1pmx_c
        real(c_double), intent(in), value :: x
    end function gnstlib_log1pmx_c

    function gnstlib_log1mexp_c(x, err_id) bind(C, name="gnstlib_log1mexp")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_log1mexp_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_log1mexp_c

    function gnstlib_log1pexp_c(x) bind(C, name="gnstlib_log1pexp")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_log1pexp_c
        real(c_double), intent(in), value :: x
    end function gnstlib_log1pexp_c

    function gnstlib_cexp_c(z) bind(C, name="gnstlib_cexp")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cexp_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_cexp_c

    function gnstlib_clog_c(z) bind(C, name="gnstlib_clog")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_clog_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_clog_c

    function gnstlib_cos_c(x) bind(C, name="gnstlib_cos")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_cos_c
        real(c_double), intent(in), value :: x
    end function gnstlib_cos_c

    function gnstlib_sin_c(x) bind(C, name="gnstlib_sin")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_sin_c
        real(c_double), intent(in), value :: x
    end function gnstlib_sin_c

    function gnstlib_tan_c(x) bind(C, name="gnstlib_tan")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_tan_c
        real(c_double), intent(in), value :: x
    end function gnstlib_tan_c

    function gnstlib_sec_c(x) bind(C, name="gnstlib_sec")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_sec_c
        real(c_double), intent(in), value :: x
    end function gnstlib_sec_c

    function gnstlib_csc_c(x) bind(C, name="gnstlib_csc")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_csc_c
        real(c_double), intent(in), value :: x
    end function gnstlib_csc_c

    function gnstlib_cot_c(x) bind(C, name="gnstlib_cot")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_cot_c
        real(c_double), intent(in), value :: x
    end function gnstlib_cot_c

    function gnstlib_acos_c(x) bind(C, name="gnstlib_acos")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_acos_c
        real(c_double), intent(in), value :: x
    end function gnstlib_acos_c

    function gnstlib_asin_c(x) bind(C, name="gnstlib_asin")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_asin_c
        real(c_double), intent(in), value :: x
    end function gnstlib_asin_c

    function gnstlib_atan_c(x) bind(C, name="gnstlib_atan")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_atan_c
        real(c_double), intent(in), value :: x
    end function gnstlib_atan_c

    function gnstlib_atan2_c(y, x) bind(C, name="gnstlib_atan2")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_atan2_c
        real(c_double), intent(in), value :: y, x
    end function gnstlib_atan2_c

    function gnstlib_asec_c(x) bind(C, name="gnstlib_asec")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_asec_c
        real(c_double), intent(in), value :: x
    end function gnstlib_asec_c

    function gnstlib_acsc_c(x) bind(C, name="gnstlib_acsc")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_acsc_c
        real(c_double), intent(in), value :: x
    end function gnstlib_acsc_c

    function gnstlib_acot_c(x) bind(C, name="gnstlib_acot")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_acot_c
        real(c_double), intent(in), value :: x
    end function gnstlib_acot_c

    function gnstlib_cospi_c(x) bind(C, name="gnstlib_cospi")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_cospi_c
        real(c_double), intent(in), value :: x
    end function gnstlib_cospi_c

    function gnstlib_sinpi_c(x) bind(C, name="gnstlib_sinpi")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_sinpi_c
        real(c_double), intent(in), value :: x
    end function gnstlib_sinpi_c

    function gnstlib_ccos_c(z) bind(C, name="gnstlib_ccos")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ccos_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ccos_c

    function gnstlib_csin_c(z) bind(C, name="gnstlib_csin")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_csin_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_csin_c

    function gnstlib_ctan_c(z) bind(C, name="gnstlib_ctan")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ctan_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ctan_c

    function gnstlib_csec_c(z) bind(C, name="gnstlib_csec")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_csec_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_csec_c

    function gnstlib_ccsc_c(z) bind(C, name="gnstlib_ccsc")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ccsc_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ccsc_c

    function gnstlib_ccot_c(z) bind(C, name="gnstlib_ccot")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ccot_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ccot_c

    function gnstlib_cacos_c(z) bind(C, name="gnstlib_cacos")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cacos_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_cacos_c

    function gnstlib_casin_c(z) bind(C, name="gnstlib_casin")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_casin_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_casin_c

    function gnstlib_catan_c(z) bind(C, name="gnstlib_catan")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_catan_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_catan_c

    function gnstlib_casec_c(z) bind(C, name="gnstlib_casec")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_casec_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_casec_c

    function gnstlib_cacsc_c(z) bind(C, name="gnstlib_cacsc")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cacsc_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_cacsc_c

    function gnstlib_cacot_c(z) bind(C, name="gnstlib_cacot")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cacot_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_cacot_c

    function gnstlib_ccospi_c(z) bind(C, name="gnstlib_ccospi")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_ccospi_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_ccospi_c

    function gnstlib_csinpi_c(z) bind(C, name="gnstlib_csinpi")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_csinpi_c
        complex(c_double_complex), intent(in), value :: z
    end function gnstlib_csinpi_c

    function gnstlib_cosh_c(x) bind(C, name="gnstlib_cosh")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_cosh_c
        real(c_double), intent(in), value :: x
    end function gnstlib_cosh_c
